comments out duplicate declaration

--- a/piwik_nginx.conf
+++ b/piwik_nginx.conf
@@ -36,7 +36,7 @@ server {
     fastcgi_param  DOCUMENT_URI       $document_uri;
     fastcgi_param  DOCUMENT_ROOT      $document_root;
     fastcgi_param  SERVER_PROTOCOL    $server_protocol;
-    fastcgi_param  REMOTE_ADDR        $remote_addr;
+    // fastcgi_param  REMOTE_ADDR        $remote_addr;
     fastcgi_param  REMOTE_ADDR        $http_x_forwarded_for;
     fastcgi_param  REMOTE_PORT        $remote_port;
     fastcgi_param  SERVER_ADDR        $server_addr;
